<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        tools:context=".activities.DetailsActivity">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Detalhes da Auditoria"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/textLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Logout"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="312dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:paddingRight="2dp"
                android:text="@string/cifrao"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textTTCCompetitor"
                app:layout_constraintTop_toBottomOf="@+id/textTTCResale" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:paddingRight="2dp"
                android:text="@string/cifrao"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageTTVTTC"
                app:layout_constraintTop_toBottomOf="@+id/textTTCCompetitor" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:paddingRight="2dp"
                android:text="@string/cifrao"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textTTVCompetitor"
                app:layout_constraintTop_toBottomOf="@+id/textTTVResale" />

            <ImageView
                android:id="@+id/imageSalePoint"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/nome_do_ponto_de_venda"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_sales_point"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/imageProduct"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/produto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageSalePoint"
                app:srcCompat="@drawable/ic_product"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/imageTTVTTC"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/ttv_ttc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageProduct"
                app:srcCompat="@drawable/ic_ttc_ttv"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textSalePoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:text="@string/nome_do_ponto_de_venda"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageSalePoint"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textSalePointName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/nome_do_ponto_de_venda"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageSalePoint"
                app:layout_constraintTop_toBottomOf="@+id/textSalePoint" />

            <TextView
                android:id="@+id/textProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/produto"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageProduct"
                app:layout_constraintTop_toBottomOf="@+id/imageSalePoint" />

            <TextView
                android:id="@+id/textProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/produto"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageProduct"
                app:layout_constraintTop_toBottomOf="@+id/textProduct" />

            <TextView
                android:id="@+id/textTTVCompetitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/ttv_concorrente"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageTTVTTC"
                app:layout_constraintTop_toBottomOf="@+id/imageProduct" />

            <TextView
                android:id="@+id/textTTVCompetitorPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textTTVCompetitor" />

            <TextView
                android:id="@+id/textTTCCompetitorPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textTTCCompetitor" />

            <TextView
                android:id="@+id/textTTVResale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/ttv_revenda"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textTTVCompetitor"
                app:layout_constraintTop_toBottomOf="@+id/imageProduct" />

            <TextView
                android:id="@+id/textTTCResale"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/ttc_revenda"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textTTCCompetitor"
                app:layout_constraintTop_toBottomOf="@+id/imageTTVTTC" />

            <TextView
                android:id="@+id/textTTVResalePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textTTVResale"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textTTCResalePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textTTCResale" />

            <TextView
                android:id="@+id/textTTCCompetitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tcc_concorrete"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageTTVTTC"
                app:layout_constraintTop_toBottomOf="@+id/imageTTVTTC" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:paddingRight="2dp"
                android:text="@string/cifrao"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageTTVTTC"
                app:layout_constraintTop_toBottomOf="@+id/textTTVCompetitor" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="274dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/textIrregularPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/preco_irregular"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageIrregularPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/preco_irregular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textLotNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/numero_do_lote"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageLotNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/numero_do_lote" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:paddingVertical="16dp"
                android:text="Anterior"
                android:background="@drawable/button_shape"/>

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingVertical="16dp"
                android:text="Próximo"
                android:background="@drawable/button_shape_blue"
                android:textColor="@color/white"/>
        </LinearLayout>

        <include
            android:id="@+id/imageInclude"
            layout="@layout/image_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>