<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.AuditsDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Detalhes da Auditoria"
        app:titleTextColor="@color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listAuditsDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBackground"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/todas_auditorias"
                app:srcCompat="@drawable/ic_small_all_blue"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Todos"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageOnApproval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/auditorias_em_analise"
                app:srcCompat="@drawable/ic_small_on_approval"
                tools:ignore="VectorDrawableCompat" />


            <TextView
                android:id="@+id/textOnApproval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Em análise"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/textColor"
                android:textSize="12sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageApproved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/auditorias_aprovadas"
                app:srcCompat="@drawable/ic_small_approved"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textApproved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aprovados"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/textColor"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageDisapproved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/auditorias_reprovadas"
                app:srcCompat="@drawable/ic_small_disapproved"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textDisapproved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rejeitados"
                android:textColor="@color/textColor"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
